2007-10-23  Sven Schuetz <sven@de.ibm.com> (fix proposed by Rajib Saha)

	* cimcClientSfcbLocal.c:
	Fixed 1818578: sfcb local leaks memory during associator calls

2007-10-23  Sven Schuetz <sven@de.ibm.com> (fix proposed by Zhen Gang Li)

	* cimXmlGen.c:
	Fixed 1818503: sfcb generates incorrect xml for embedded objects

2007-10-23  Sven Schuetz <sven@de.ibm.com>

	* indCIMXMLHandler.c, internalProvider.c, internalProvider.h:
	Fixed 1817878: sfcb might not load indication providers at startup

2007-10-16  Sven Schuetz <sven@de.ibm.com> (fix proposed by Reddy Dasari)

	* cimXmlGen.c:
	Fixed 1811090: sfcb memory corruption on property value with quote or apos

2007-10-16  Sven Schuetz <sven@de.ibm.com> (fix proposed by Rajib Saha)

	* cimcClientSfcbLocal.c:
	Fixed 1814455: sfcb leaks fd's during local connect

2007-10-12  Sven Schuetz <sven@de.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed 1809458: sfcb local connect lib does not pass on principal info

2007-10-02  Sven Schuetz <sven@de.ibm.com>

	* cimXmlParser.c:
	Fixed 1807363: sfcb reports an error for a valid xml declaration

2007-10-02  Sven Schuetz <sven@de.ibm.com>

	* objectpath.c:
	Removed patch for bug 1751084

2007-10-02  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-67.boeblingen.de.ibm.com>

	* args.c,array.c,brokerEnc.c,brokerUpc.c,cimXmlGen.c,cimXmlGen.h,
	cimXmlRequest.c,constClass.c,context.c,datetime.c,httpAdapter.c,
	instance.c,internalProvider.c,Status:,interopProvider.c,native.h,
	objectImpl.c,objectpath.c,predicate.c,qualifier.c,qualifierProvider.c,
	selectexp.c,string.c,support.c,utilft.h:
	Fixed 1805644: HTTP Adapter Performance Improvements. Avoid useless
	string length measurements and double copies.

2007-10-02  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c, cimXmlParser.c:
	Fixed 1759083: sfcb cannot handle the embeddedobject attribute

2007-09-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-67.boeblingen.de.ibm.com>

	* cimcClientSfcbLocal.h: 
	Fixed 1791690: also fix header file definition.
