@@ -1,3 +1,7 @@
+2007-10-31  Sven Schuetz <sven@de.ibm.com>
+	* args.c, array.c, instance.c, internalProvider.c:
+	Fixed 1816606: problem with propertylist in modifyInstance
+
 2007-10-23  Sven Schuetz <sven@de.ibm.com> (fix proposed by Rajib Saha)
 
 	* cimcClientSfcbLocal.c:
